--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
     "lint": "eslint **/*.{js,json}",
-    "lint:fix": "eslint --fix **/*.{js,json}"
+    "lint:fix": "eslint --fix **/*.{js,json}",
+    "dev:debug": "node --inspect ./bin/server.js"
   },
   "dependencies": {
     "cors": "2.8.5",
