--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
     "lint": "eslint **/*.{js,json}",
     "lint:fix": "eslint --fix **/*.{js,json}",
-    "dev:debug": "node --inspect ./bin/server.js"
+    "dev:debug": "node --inspect ./bin/server.js",
+    "test": "cross-env NODE_ENV=test jest --no-cache --verbose",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
     "cloudinary": "1.25.0",
     "cors": "2.8.5",
-    "cross-env": "7.0.3",
     "dotenv": "8.2.0",
     "eslint-config-prettier": "^7.2.0",
     "express": "4.17.1",
@@ -31,12 +33,15 @@
     "passport-jwt": "4.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.19.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "2.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "nodemon": "2.0.7"
+    "jest": "26.6.3",
+    "nodemon": "^2.0.7",
+    "supertest": "6.1.3"
   }
 }
